--- a/views/user/orderSuccess.hbs
+++ b/views/user/orderSuccess.hbs
@@ -45,7 +45,7 @@
                                 <div>
                                     <p class="mb-1">{{order.orderId}} was placed on {{date order.datePlaced "MMMM Do, YYYY"}} </p>
                                     <p class="mb-1"><strong>Expected Delivery Date:</strong>{{date order.deliveryExpectedDate "MMMM Do, YYYY"}} </p>
-                                    <a href="#" class="btn btn-link p-0 text-primary">Track Your Order</a>
+                                    <a href="/myaccount" class="btn btn-link p-0 text-primary">Track Your Order</a>
                                 </div>
                                   <a href="/download-invoice/{{order.orderId}}" class="btn btn-outline-primary-2 btn-sm">Download Invoice</a>
                             </div>
