--- a/views/layout/userLayout.hbs
+++ b/views/layout/userLayout.hbs
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="assets/css/plugins/owl-carousel/owl.carousel.css">
     <link rel="stylesheet" href="assets/css/plugins/magnific-popup/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/plugins/jquery.countdown.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <!-- Main CSS File -->
     <link rel="stylesheet" href="assets/css/style.css">
     {{!-- below 2 links only moved to index.hbs
